[package]
name = "zenith"
version = "0.14.0"
authors = ["Benjamin Vaisvil"]
edition = "2018"
description = "Similar to top or htop but with CPU, Network Usage, and Disk Usage charts."
readme = "README.md"
homepage = "https://github.com/bvaisvil/zenith"
repository = "https://github.com/bvaisvil/zenith"
license = "MIT"
keywords = ["system monitor", "tui", "process monitor", "sysinfo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
nvidia = ["nvml-wrapper"]

[dependencies]
tui = { version = "0.19.*", features = ["crossterm"], default-features = false }
crossterm = "0.25.*"
byte-unit = "~4.0.17"
users = "0.11.0"
num-derive = "0.3.3"
num-traits = "0.2"
heim = {git = "https://github.com/heim-rs/heim", rev = "0cc1540", features = ["full"]}
futures = "0.3.21"
gumdrop = { version = "~0.8.1", features = ["default_expr"] }
chrono = "0.4.*"
sysinfo = {git = "https://github.com/bvaisvil/sysinfo.git", branch="zenith_changes_15.1"}
dirs-next = "2.0.0"
serde = { version = "~1.0.147", features = ["derive"] }
serde_derive = "~1.0.147"
flate2 = "1.0.22"
bincode = "1.3.3"
starship-battery = "0.7.*"
signal-hook = "0.3.13"
log = "0.4.16"
env_logger = { version = "0.9", default-features = false }
libc = "0.2"
nvml-wrapper = { version = "0.7.0", optional = true }
unicode-width = "0.1.9"
[target.'cfg(target_os = "linux")'.dependencies]
linux-taskstats = { version = "0.2.0", default-features = false }
