[package]
name = "zenith"
version = "0.14.2"
authors = ["Benjamin Vaisvil"]
edition = "2018"
description = "Similar to top or htop but with CPU, Network Usage, and Disk Usage charts."
readme = "README.md"
homepage = "https://github.com/bvaisvil/zenith"
repository = "https://github.com/bvaisvil/zenith"
license = "MIT"
keywords = ["system monitor", "tui", "process monitor", "sysinfo"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
nvidia = ["nvml-wrapper"]

[dependencies]
ratatui = { version = "0.29.*", features = [
    "crossterm",
], default-features = false }
crossterm = "0.28.*"
byte-unit = "~5.1.6"
uzers = "0.12.1"
num-derive = "0.4.2"
num-traits = "0.2"
heim = { git = "https://github.com/bvaisvil/heim.git", branch = "zenith_changes", features = [
    "full",
] }
futures = "0.3.31"
gumdrop = { version = "~0.8.1", features = ["default_expr"] }
chrono = "~0.4.39"
sysinfo = { git = "https://github.com/bvaisvil/sysinfo.git", branch = "zenith_changes_15.1" }
dirs-next = "2.0.0"
serde = { version = "~1.0.217", features = ["derive"] }
serde_derive = "~1.0.217"
flate2 = "1.0.35"
bincode = "1.3.3"
starship-battery = "0.10.*"
signal-hook = "~0.3.17"
log = "~0.4.22"
env_logger = { version = "~0.11.6", default-features = false }
libc = "0.2"
nvml-wrapper = { version = "0.10.0", optional = true }
unicode-width = "0.2.0"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
proptest = "1.4"
insta = { version = "1.34", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-taskstats = { version = "0.7.0", default-features = false }
